# mcu_Nikel

./: .gitignore  README.md  main.c
01-blink/: CMakeLists.txt
02-control/: CMakeLists.txt  main.c
02-control/protocol-task/: protocol-task.c  protocol-task.h
02-echo/: CMakeLists.txt  main.c
02-on-off/: CMakeLists.txt  main.c  main.h  on_off.py  on_off_blink.py
02-on-off/led/: led.c  led.h
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/led-task/: led-task.c  led-task.h
03-adc/stdio-task/: stdio-task.c  stdio-task.h
